[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/toxic_frog_red_w_green_eye.png" type="Texture" id=1]
[ext_resource path="res://Animals/BlueFrog1.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="RedFrog1" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
frame = 4
playing = true

[node name="PushTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="StopTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="PushTimer" to="." method="_on_PushTimer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
